(lang dune 3.4)

(name amqp_client_eio)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Anders Fugmann")

(maintainers "Anders Fugmann")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name amqp_client_eio)
 (synopsis "AMQP client based on eio (Multicore / effects")
 (description "AMQP client based on eio (Multicore / effects")
 (depends ocaml dune)
 (tags
  (topics "AMQP eio multicore" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
