(library
 (name        test_lib)
 (libraries   eio_main eio)
 (modules     test_lib)
 (synopsis    "Utillity functions for integration tests"))

(executables
 (names connection_test
        channel_test
        queue_test
        consume_test)
 (modules :standard \ test_lib)
 (libraries eio_main amqp_client_eio test_lib))

(rule
 (alias  integration)
 (action (run ./connection_test.exe))
)
(rule
 (alias  integration)
 (action (run ./channel_test.exe))
)
(rule
 (alias  integration)
 (action (run ./queue_test.exe))
)
(rule
 (alias  integration)
 (action (run ./consume_test.exe))
)
